# STEP2023

./: .gitignore  hash.py  pyproject.toml
first_week/homework1/: README.md  anagram.py  api.py  save_dict.py  sorted_words.txt  words.json
first_week/homework1/tests/: test_anagram.py
first_week/homework2/: README.md  save_sorted_dictionary.py  score_checker.py  sorted_by_score_words.txt
forth_week/: README.md  wikipedia.py
playground/: BFS.py  DFS.py  binary_search.py  hash.py  make_hashtable.py
second_week/: README.md
second_week/homework1/: hash_table.py
third_week/: README.md  calculate.py  read_letter.py
third_week/calculation/: brackets.py  calculate.py  read_letter.py  tokenize.py
third_week/tests/: test_calculation.py  test_calculation_with_brackets.py
workflows/: lint.yml
