[tool.poetry]
name = "step2023"
version = "0.1.0"
description = "google step program 2023!"
authors = ["takeshiho0531"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
